--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    uses: leelatech/.github/workflows/maven.yaml@main
+    uses: leelatech/.github/workflows/standard-docker-ci.yaml@main
     #with:
       #ecr-repository: honeycomb/register-api
       #ghp-url: "https://verbose-happiness-e7c18a87.pages.github.io"
