--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,9 @@ on:
     branches:
       - dev
       - main
-
+  push:
+    branches:
+      - main
 jobs:
   build:
     uses: leelatechllc/.github/workflows/standard-docker-ci.yaml@main
