--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
       - main
 jobs:
   build:
-    uses: leelatechllc/.github/workflows/standard-docker-ci.yaml
+    uses: leelatechllc/.github/workflows/standard-docker-ci.yaml@0.0.0
     #with:
       #ecr-repository: honeycomb/register-api
       #ghp-url: "https://verbose-happiness-e7c18a87.pages.github.io"
