--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,7 @@ jobs:
     secrets:
       #nexus-username: ${{ secrets.NEXUS_USERNAME }}
       #nexus-password: ${{ secrets.NEXUS_PASSWORD }}
-      dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
-      dockerhub_password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      # dockerhub_password: ${{ secrets.DOCKERHUB_TOKEN }}
+      dockerhub_username: "dockeruser"
+      dockerhub_password: "dockerpass"
