--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -1,4 +1,4 @@
-name: Octo Organization CI
+name: docker-ci
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ["self-hosted", "Linux", "X64"]
 
     steps:
       - uses: actions/checkout@v4
