--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: 
-      group: Default
+    runs-on: "self-hosted"
 
     steps:
       - uses: actions/checkout@v4
