--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -14,4 +14,5 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run a one-line script
-        run: echo Hello from Octo Organization
+        run: echo Hello from Octo Organization ${{ secrets.DOCKER_USER }}
+        
