--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -14,5 +14,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run a one-line script
-        run: ls ${{ secrets.DOCKER_USER }}
+        run: ls
         
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}        
