--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -16,8 +16,17 @@ jobs:
       - name: Run a one-line script
         run: ls
         
-      - name: Login to Docker Hub
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USER }}
+      #     password: ${{ secrets.DOCKER_PASS }} 
+
+      -
+        name: Login to Nexus Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}        
+          registry: ${{ secrets.DOCKER_REGISTRY_URL}}
+          username: ${{ secrets.DOCKER_USER}}
+          password: ${{ secrets.DOCKER_PASS}}
+
