--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -25,7 +25,10 @@ jobs:
           registry: ${{ secrets.DOCKER_REGISTRY_URL}}
           username: ${{ secrets.DOCKER_USER}}
           password: ${{ secrets.DOCKER_PASS}}
-
+      - name: Sets datetime tag
+        run: _DATE=$(date +%m%d%Y_%H%M)
+      - name: Shows datetime tag
+        run: echo ${_DATE}       
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
