--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -38,6 +38,7 @@ jobs:
           # platforms: linux/amd64,linux/arm64
           push: true
           tags: |
+            ${{ secrets.DOCKER_REGISTRY_URL}}/${{ github.event.repository.name }}:${{ env._DATE }}
             ${{ secrets.DOCKER_REGISTRY_URL}}/${{ github.event.repository.name }}:latest
           # ghcr.io/user/app:1.0.0                  
 
