--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   build:
-    runs-on: "self-hosted"
+    #runs-on: "self-hosted"
+    runs-on: [self-hosted, Linux, X64, USA]
 
     steps:
       - uses: actions/checkout@v4
